--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="overlay"></div>
       <div class="container-fluid px-0">
       	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="images/17809.jpg" alt="">
+	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="images/House cover.jpg" alt="">
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
 	        		<span class="subheading">Best Seller Book Of The Week</span>
