--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
 	        		<span class="subheading">คิดจะสร้างบ้าน คิดถึง Perfect Building</span>
-		  				<h1>Perfect Building House Chiang Mai</h1>
+		  				<h1>Perfect Building Chiang Mai</h1>
 		  				<p></p>
 		  				<p><a href="#" class="btn btn-primary py-3 px-4">Contact Us</a></p>
 	          </div>
