--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-md-12 col-lg ftco-animate">
-    				<a href="#" class="partner d-flex justify-content-center"><img src="images/partner-1.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-1.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-md-12 col-lg ftco-animate">
     				<a href="#" class="partner d-flex justify-content-center"><img src="images/partner-2.png" class="img-fluid" alt="Colorlib Template"></a>
