Change About us

--- a/index.html
+++ b/index.html
@@ -96,15 +96,11 @@
     			<div class="col-md-6 col-lg-6 pl-md-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		            <h2 class="mb-4">About The Book</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		            <h2 class="mb-4">เกี่ยวกับเรา</h2>
+		            <p>Perfect building รับสร้างบ้าน อาคาร รับออกแบบบ้าน จังหวัดเชียงใหม่และพื้นที่ใกล้เคียงโดยวิศวะกรผู้เชียวชาญที่มีประสบการณ์มากกว่า 10 ปี</p>
 		            <div class="text-about">
-		            	<h4>Award achievements</h4>
-			            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-			            <h4>Read On Any Devices</h4>
-			            <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-			            <h4>Very High Resolution</h4>
-			            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		            	<h4>ผลงานของเรา</h4>
+			            <p>บริษัทมีตัวอย่างผลงาน แบบบ้านเดี่ยว แบบบ้านสองชั้น แบบบ้านสามชั้น แบบอพาร์ทเม้น คอนโด และรับสร้างบ้านในที่ดินของลูกค้า</p>
 		            </div>
 		          </div>
 		        </div>
