--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Perfect Building<span>.</span></a>
+	      <a class="navbar-brand" href="index.html">Perfect Building Home<span>.</span></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -51,8 +51,8 @@
 	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="images/House cover.jpg" alt="">
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
-	        		<span class="subheading">คิดจะสร้างบ้าน คิดถึง Perfect Building</span>
-		  				<h1>Perfect Building Chiang Mai</h1>
+	        		<span class="subheading">คิดจะสร้างบ้าน คิดถึง</span>
+		  				<h1>Perfect Building Home</h1>
 		  				<p></p>
 		  				<p><a href="#" class="btn btn-primary py-3 px-4">Contact Us</a></p>
 	          </div>
@@ -97,7 +97,7 @@
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
 		            <h2 class="mb-4">เกี่ยวกับเรา</h2>
-		            <p>Perfect building รับสร้างบ้าน อาคาร รับออกแบบบ้าน จังหวัดเชียงใหม่และพื้นที่ใกล้เคียงโดยวิศวะกรผู้เชียวชาญที่มีประสบการณ์มากกว่า 10 ปี</p>
+		            <p>Perfect Building Home รับสร้างบ้าน อาคาร รับออกแบบบ้าน จังหวัดเชียงใหม่และพื้นที่ใกล้เคียงโดยวิศวะกรผู้เชียวชาญที่มีประสบการณ์มากกว่า 10 ปี</p>
 		            <div class="text-about">
 		            	<h4>ผลงานของเรา</h4>
 			            <p>บริษัทมีตัวอย่างผลงาน แบบบ้านเดี่ยว แบบบ้านสองชั้น แบบบ้านสามชั้น แบบอพาร์ทเม้น คอนโด และรับสร้างบ้านในที่ดินของลูกค้า</p>
