Water and Electric

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		            <p>Perfect Building Home รับสร้างบ้าน อาคาร รับออกแบบบ้าน จังหวัดเชียงใหม่และพื้นที่ใกล้เคียงโดยวิศวะกรผู้เชียวชาญที่มีประสบการณ์มากกว่า 10 ปี</p>
 		            <div class="text-about">
 		            	<h4>ผลงานของเรา</h4>
-			            <p>บริษัทมีตัวอย่างผลงาน แบบบ้านเดี่ยว แบบบ้านสองชั้น แบบบ้านสามชั้น แบบอพาร์ทเม้น คอนโด และรับสร้างบ้านในที่ดินของลูกค้า</p>
+			            <p>บริษัทมีตัวอย่างผลงาน แบบบ้านเดี่ยว แบบบ้านสองชั้น แบบบ้านสามชั้น แบบอพาร์ทเม้น คอนโด และรับสร้างบ้านในที่ดินของลูกค้า รวมถึงบริการขอน้ำ - ไฟ</p>
 		            </div>
 		          </div>
 		        </div>
