--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/About Us-1.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/AboutUs.jpg);">
 	    				</div>
     				</div>
     			</div>
