--- a/index.html
+++ b/index.html
@@ -115,32 +115,32 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
-                <strong class="number" data-number="1100">0</strong>
-                <span>Copies Sold</span>
+                <strong class="number" data-number="11">0</strong>
+                <span>บ้านเดี่ยว</span>
               </div>
             </div>
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Copies Released</span>
+                <strong class="number" data-number="12">0</strong>
+                <span>บ้านสองชั้น</span>
               </div>
             </div>
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
-                <strong class="number" data-number="340">0</strong>
-                <span>Cup Of Coffee</span>
+                <strong class="number" data-number="34">0</strong>
+                <span>บ้านสามชั้น</span>
               </div>
             </div>
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
-                <strong class="number" data-number="12000">0</strong>
-                <span>Happy Readers</span>
+                <strong class="number" data-number="12">0</strong>
+                <span>คอนโด</span>
               </div>
             </div>
           </div>
