--- a/index.html
+++ b/index.html
@@ -61,6 +61,32 @@
       </div>
     </section>
 
+    <section class="ftco-about img ftco-section" id="about-section">
+    	<div class="container">
+    		<div class="row d-flex no-gutters">
+    			<div class="col-md-6 col-lg-6 d-flex">
+    				<div class="img-about img d-flex align-items-stretch">
+    					<div class="overlay"></div>
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/AboutUs.jpg);">
+	    				</div>
+    				</div>
+    			</div>
+    			<div class="col-md-6 col-lg-6 pl-md-5">
+    				<div class="row justify-content-start pb-3">
+		          <div class="col-md-12 heading-section ftco-animate">
+		            <h2 class="mb-4">เกี่ยวกับเรา</h2>
+		            <p>Perfect Building Home รับสร้างบ้าน อาคาร รับออกแบบบ้าน จังหวัดเชียงใหม่และพื้นที่ใกล้เคียงโดยวิศวะกรผู้เชียวชาญที่มีประสบการณ์มากกว่า 10 ปี</p>
+		            <div class="text-about">
+		            	<h4>ผลงานของเรา</h4>
+			            <p>บริษัทมีตัวอย่างผลงาน แบบบ้านเดี่ยว แบบบ้านสองชั้น แบบบ้านสามชั้น แบบอพาร์ทเม้น คอนโด และรับสร้างบ้านในที่ดินของลูกค้า รวมถึงบริการขอน้ำ - ไฟให้กับลูกค้า</p>
+		            </div>
+		          </div>
+		        </div>
+	        </div>
+        </div>
+    	</div>
+    </section>
+
     <section class="ftco-section ftco-no-pb ftco-partner">
     	<div class="container">
     		<div class="row">
@@ -80,32 +106,6 @@
     				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-5.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     		</div>
-    	</div>
-    </section>
-
-    <section class="ftco-about img ftco-section" id="about-section">
-    	<div class="container">
-    		<div class="row d-flex no-gutters">
-    			<div class="col-md-6 col-lg-6 d-flex">
-    				<div class="img-about img d-flex align-items-stretch">
-    					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/AboutUs.jpg);">
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-6 col-lg-6 pl-md-5">
-    				<div class="row justify-content-start pb-3">
-		          <div class="col-md-12 heading-section ftco-animate">
-		            <h2 class="mb-4">เกี่ยวกับเรา</h2>
-		            <p>Perfect Building Home รับสร้างบ้าน อาคาร รับออกแบบบ้าน จังหวัดเชียงใหม่และพื้นที่ใกล้เคียงโดยวิศวะกรผู้เชียวชาญที่มีประสบการณ์มากกว่า 10 ปี</p>
-		            <div class="text-about">
-		            	<h4>ผลงานของเรา</h4>
-			            <p>บริษัทมีตัวอย่างผลงาน แบบบ้านเดี่ยว แบบบ้านสองชั้น แบบบ้านสามชั้น แบบอพาร์ทเม้น คอนโด และรับสร้างบ้านในที่ดินของลูกค้า รวมถึงบริการขอน้ำ - ไฟ</p>
-		            </div>
-		          </div>
-		        </div>
-	        </div>
-        </div>
     	</div>
     </section>
 
