Change Chapter to Service

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#chapter-section" class="nav-link"><span>Chapter</span></a></li>
+	          <li class="nav-item"><a href="#chapter-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#testimonial-section" class="nav-link"><span>Reviews</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>My Books</span></a></li>
 	          <li class="nav-item"><a href="#author-section" class="nav-link"><span>Author</span></a></li>
@@ -585,7 +585,7 @@
               <ul class="list-unstyled">
                 <li><a href="#"></span>Home</a></li>
                 <li><a href="#"></span>About</a></li>
-                <li><a href="#"></span>Chapter</a></li>
+                <li><a href="#"></span>Services</a></li>
                 <li><a href="#"></span>Reviews</a></li>
                 <li><a href="#"></span>Contact</a></li>
               </ul>
@@ -593,7 +593,7 @@
           </div>
           <div class="col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Services</h2>
+              <h2 class="ftco-heading-2">บริการของเรา</h2>
               <ul class="list-unstyled">
                 <li><a href="#"></span>Experience</a></li>
                 <li><a href="#"></span>Marketing Goals</a></li>
