--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/AboutUs.jpg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/AboutUs2.jpg);">
 	    				</div>
     				</div>
     			</div>
@@ -152,7 +152,7 @@
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-            <h2 class="mb-4">What's Inside The Book</h2>
+            <h2 class="mb-4">ขั้นตอนการทำงานของเรา</h2>
           </div>
         </div>
     		<div class="row">
@@ -212,8 +212,8 @@
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-5 heading-section text-center ftco-animate">
-          	<span class="subheading">Services</span>
-            <h2 class="mb-4">Services</h2>
+          	<span class="subheading">บริการของเรา</span>
+            <h2 class="mb-4">บริการของเรา</h2>
           </div>
         </div>
     		<div class="row">
