--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Perfect Building House - Chiang Mai</title>
+    <title>Perfect Building Home - Chiang Mai</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Perfect Building Home<span>.</span></a>
+	      <a class="navbar-brand" href="index.html">Perfect Building<span>.</span></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -115,7 +115,9 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
+                <!--
                 <strong class="number" data-number="11">0</strong>
+                -->
                 <span>บ้านเดี่ยว</span>
               </div>
             </div>
@@ -123,7 +125,9 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
+                <!--
                 <strong class="number" data-number="12">0</strong>
+                -->
                 <span>บ้านสองชั้น</span>
               </div>
             </div>
@@ -131,7 +135,9 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
+                <!--
                 <strong class="number" data-number="34">0</strong>
+                -->
                 <span>บ้านสามชั้น</span>
               </div>
             </div>
@@ -139,7 +145,9 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 bg-light">
               <div class="text">
+                <!--
                 <strong class="number" data-number="12">0</strong>
+                -->
                 <span>คอนโด</span>
               </div>
             </div>
