--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#chapter-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#testimonial-section" class="nav-link"><span>Reviews</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>My Books</span></a></li>
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#author-section" class="nav-link"><span>Author</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
