--- a/index.html
+++ b/index.html
@@ -362,80 +362,80 @@
     		<div class="row no-gutters justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<span class="subheading">Projects</span>
-            <h2 class="mb-4">My Other Books</h2>
+            <h2 class="mb-4">ตัวอย่างโครงการของเรา</h2>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-1.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">บ้านริมน้ำ</a></h3>
+	    					<span>บ้านเดี่ยว</span>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-2.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-2.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">Pingnakara</a></h3>
+	    					<span>โรงแรม</span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-3.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-3.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">Regent</a></h3>
+	    					<span>บ้านเดี่ยว</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-4.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-4.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">Condo</a></h3>
+	    					<span>Condo</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-5.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-5.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
+	    					<span>บ้านเดี่ยว</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-7.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-7.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
+	    					<span>บ้านเดี่ยว</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-6.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-6.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">โป่งแยง</a></h3>
+	    					<span>บ้านเดี่ยว</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/book-8.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-8.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">You Are Your Ony Limit</a></h3>
-	    					<span>Romance</span>
+	    					<h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
+	    					<span>บ้านเดี่ยว</span>
 	    				</div>
     				</div>
     			</div>
