--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-md-12 col-lg ftco-animate">
-    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-1.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-1.jpg" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-md-12 col-lg ftco-animate">
-    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-2.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-2.jpg" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-md-12 col-lg ftco-animate">
-    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-3.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-3.jpg" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-md-12 col-lg ftco-animate">
-    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-4.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-4.jpg" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-md-12 col-lg ftco-animate">
-    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-5.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner d-flex justify-content-center"><img src="images/Home-5.jpg" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     		</div>
     	</div>
