--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-4.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text p-4">
-	    					<h3><a href="#">Condo</a></h3>
-	    					<span>Condo</span>
+	    					<h3><a href="#">บ้านพร้อมสระว่ายน้ำ</a></h3>
+	    					<span>บ้านเดี่ยว</span>
 	    				</div>
     				</div>
     			</div>
