--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+            <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#chapter-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#testimonial-section" class="nav-link"><span>Reviews</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#author-section" class="nav-link"><span>Author</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
@@ -148,7 +148,93 @@
                 <!--
                 <strong class="number" data-number="12">0</strong>
                 -->
-                <span>คอนโด</span>
+                <span>โรงแรมหรือคอนโด</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="ftco-section ftco-project" id="projects-section">
+      <div class="container">
+        <div class="row no-gutters justify-content-center pb-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+            <span class="subheading">Projects</span>
+            <h2 class="mb-4">ตัวอย่างโครงการของเรา</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-1.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">บ้านริมน้ำ</a></h3>
+                <span>บ้านเดี่ยว</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-2.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">Pingnakara</a></h3>
+                <span>โรงแรม</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-3.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">Regent</a></h3>
+                <span>บ้านเดี่ยว</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-4.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">บ้านพร้อมสระว่ายน้ำ</a></h3>
+                <span>บ้านเดี่ยว</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-5.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
+                <span>บ้านเดี่ยว</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-7.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
+                <span>บ้านเดี่ยว</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-6.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">โป่งแยง</a></h3>
+                <span>บ้านเดี่ยว</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-8.jpg);">
+              <div class="overlay"></div>
+              <div class="text p-4">
+                <h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
+                <span>บ้านเดี่ยว</span>
               </div>
             </div>
           </div>
@@ -357,91 +443,7 @@
     </section>
 
 
-    <section class="ftco-section ftco-project" id="projects-section">
-    	<div class="container">
-    		<div class="row no-gutters justify-content-center pb-5">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<span class="subheading">Projects</span>
-            <h2 class="mb-4">ตัวอย่างโครงการของเรา</h2>
-          </div>
-        </div>
-    		<div class="row">
-    			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-1.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">บ้านริมน้ำ</a></h3>
-	    					<span>บ้านเดี่ยว</span>
-	    				</div>
-    				</div>
-  				</div>
-  				<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-2.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">Pingnakara</a></h3>
-	    					<span>โรงแรม</span>
-	    				</div>
-    				</div>
-  				</div>
 
-    			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-3.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">Regent</a></h3>
-	    					<span>บ้านเดี่ยว</span>
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-4.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">บ้านพร้อมสระว่ายน้ำ</a></h3>
-	    					<span>บ้านเดี่ยว</span>
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-5.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
-	    					<span>บ้านเดี่ยว</span>
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-7.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
-	    					<span>บ้านเดี่ยว</span>
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-6.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">โป่งแยง</a></h3>
-	    					<span>บ้านเดี่ยว</span>
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-3">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-end" style="background-image: url(images/Project-8.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text p-4">
-	    					<h3><a href="#">บ้านบนพื้นที่ส่วนตัว</a></h3>
-	    					<span>บ้านเดี่ยว</span>
-	    				</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </section>
 
 		<section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="author-section">
     	<div class="container">
