--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
 								<i class="flaticon-user-experience"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Experience</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">รับออกแบบบ้าน</h3>
+								<p>ออกแบบบ้านตามขนาดพื้นที่ด้วยดีไซน์ที่ทันสมัย</p>
 							</div>
 						</div>
 					</div>
@@ -328,8 +328,8 @@
 								<i class="flaticon-network"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Marketing Goals</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">รับสร้างบ้าน</h3>
+								<p>เรามีทีมวิศวะกรผู้เชี่ยวชาญที่มีประสบการณ์สร้างบ้านและอาคารสูงมามากกว่า 10 ปี</p>
 							</div>
 						</div>
 					</div>
@@ -339,8 +339,8 @@
 								<i class="flaticon-innovation"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Targetting Vission</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">ให้คำปรึกษา</h3>
+								<p>เรายินดีให้คำปรึกษาทุกเรื่องที่เกี่ยวกับการสร้างบ้าน</p>
 							</div>
 						</div>
 					</div>
@@ -348,6 +348,7 @@
     	</div>
     </section>
 
+<!--
     <section class="ftco-section testimony-section ftco-no-pb" id="testimonial-section">
     	<div class="img img-bg border" style="background-image: url(images/bg_4.jpg);"></div>
     	<div class="overlay"></div>
@@ -441,7 +442,7 @@
         </div>
       </div>
     </section>
-
+-->
 
 
 
@@ -605,9 +606,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">บริการของเรา</h2>
               <ul class="list-unstyled">
-                <li><a href="#"></span>Experience</a></li>
-                <li><a href="#"></span>Marketing Goals</a></li>
-                <li><a href="#"></span>Targetting Vission</a></li>
+                <li><a href="#"></span>ออกแบบบ้าน</a></li>
+                <li><a href="#"></span>สร้างบ้าน</a></li>
+                <li><a href="#"></span>ให้คำปรึกษา</a></li>
               </ul>
             </div>
           </div>
