--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         </div>
       </div>
     </section>
--->
+
 
 
 
@@ -488,13 +488,15 @@
         </div>
     	</div>
     </section>
+-->
+
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h2 class="mb-4">ติดต่อเรา</h2>
+            <p>คิดจะสร้างบ้านคิดถึง Perfect Building Home</p>
           </div>
         </div>
 
@@ -505,8 +507,8 @@
           			<span class="fa fa-map-marker"></span>
           		</div>
           		<div>
-	          		<h3 class="mb-4">Address</h3>
-		            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+	          		<h3 class="mb-4">ที่อยู่</h3>
+		            <p>อำเภอเมือง เชียงใหม่</p>
 		          </div>
 	          </div>
           </div>
@@ -581,8 +583,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2">ติดต่อเรา</h2>
+              <p>คิดจะสร้างบ้าน คิดถึง Perfect Building Home</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 	              <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
