--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
     			<div class="col-md-3 mb-4">
 				    <nav id="navi">
 					    <ul>
-					      <li><a href="#page-1">Title page</a></li>
-					      <li><a href="#page-2">Copyright</a></li>
+					      <li><a href="#page-1">ออกแบบ</a></li>
+					      <li><a href="#page-2">เลือกวัสดุ</a></li>
 					      <li><a href="#page-3">Table of contents</a></li>
 					      <li><a href="#page-4">Dedication</a></li>
 					      <li><a href="#page-5">Foreword</a></li>
@@ -266,36 +266,36 @@
 					</div>
 					<div class="col-md-9">
 					  <div id="page-1" class= "page bg-light one">
-					  	<h2 class="heading">Title Page</h2>
-					  	<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					  	<h2 class="heading">ออกแบบ</h2>
+					  	<p>เริ่มต้นออกแบบบ้าน ตามขนาดพื้นที่และงบประมาณของลูกค้า</p>
 					  </div>
 					  <div id="page-2" class= "page bg-light two">
-					  	<h2 class="heading">Copyright</h2>
-					  	<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					  	<h2 class="heading">เลือกวัสดุ</h2>
+					  	<p>นำเสนอวัสดุที่ดีที่สุดตามงบประมาณของลูกค้า</p>
 					  </div>
 					  <div id="page-3" class= "page bg-light three">
-					  	<h2 class="heading">Table of Contents</h2>
-					  	<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					  	<h2 class="heading">ขออนุญาติปลูกสร้าง</h2>
+					  	<p>ขออนุญาติปลูกสร้างอาคารกับหน่วยงานราชการเจ้าของพื้นที่</p>
 					  </div>
 					  <div id="page-4" class= "page bg-light four">
-					    <h2 class="heading">Dedication</h2>
-					    <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					    <h2 class="heading">ทำสัญญาว่าจ้าง</h2>
+					    <p>ทำสัญญาเพื่อรับประกันงานก่อสร้างและการแบ่งงวดงาน</p>
 					  </div>
 					  <div id="page-5" class= "page bg-light five">
-					    <h2 class="heading">Foreword</h2>
-					    <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					    <h2 class="heading">จัดเตรียมพื้นที่ก่อสร้าง</h2>
+					    <p>หลังจากทำสัญญาแล้ว เราจะทำการจัดเตรียมสถานที่ก่อสร้างเช่นการรื้อถอน หรือปรับระดับ</p>
 					  </div>
 					  <div id="page-6" class= "page bg-light six">
-					    <h2 class="heading">Prologue</h2>
-					    <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					    <h2 class="heading">การก่อสร้าง</h2>
+					    <p>เริ่มต้นก่อสร้างจากงานรากฐานและโครงสร้าง, ผนังและหลังคา, งานช่องเปิดต่างๆ เช่นประตูหน้าต่าง, งานระบบไฟฟ้า ประปา, ตกแต่งสถาปัตยกรรม ด้วยผู้เชี่ยวชาญ</p>
 					  </div>
 					  <div id="page-7" class= "page bg-light seven">
-					    <h2 class="heading">Epilogue</h2>
-					    <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					    <h2 class="heading">ส่งมอบบ้าน</h2>
+					    <p>ขั้นตอนการส่งมอบโดยการตรวจสอบจากลูกค้า</p>
 					  </div>
 					  <div id="page-8" class= "page bg-light eight">
-					    <h2 class="heading">Epigraph</h2>
-					    <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+					    <h2 class="heading">รับประกัน</h2>
+					    <p>เรารับประกันตัวบ้านหลังจากเข้าอยู่อาศัยด้วยทีมงานผู้เชี่ยวชาญ</p>
 					  </div>
 					</div>
 			  </div>
