--- a/index.html
+++ b/index.html
@@ -253,36 +253,36 @@
     			<div class="col-md-3 mb-4">
 				    <nav id="navi">
 					    <ul>
-					      <li><a href="#page-1">ออกแบบ</a></li>
-					      <li><a href="#page-2">เลือกวัสดุ</a></li>
-					      <li><a href="#page-3">Table of contents</a></li>
-					      <li><a href="#page-4">Dedication</a></li>
-					      <li><a href="#page-5">Foreword</a></li>
-					      <li><a href="#page-6">Prologue</a></li>
-					      <li><a href="#page-7">Epilogue</a></li>
-					      <li><a href="#page-8">Epigraph</a></li>
+					      <li><a href="#page-1">การออกแบบ</a></li>
+					      <li><a href="#page-2">การคัดเลือกวัสดุ</a></li>
+					      <li><a href="#page-3">การขออนุญาติปลูกสร้าง</a></li>
+					      <li><a href="#page-4">การทำสัญญาว่าจ้าง</a></li>
+					      <li><a href="#page-5">การจัดเตรียมพื้นที่ก่อสร้าง</a></li>
+					      <li><a href="#page-6">การก่อสร้าง</a></li>
+					      <li><a href="#page-7">การส่งมอบบ้าน</a></li>
+					      <li><a href="#page-8">การรับประกัน</a></li>
 					    </ul>
 					  </nav>
 					</div>
 					<div class="col-md-9">
 					  <div id="page-1" class= "page bg-light one">
-					  	<h2 class="heading">ออกแบบ</h2>
+					  	<h2 class="heading">การออกแบบ</h2>
 					  	<p>เริ่มต้นออกแบบบ้าน ตามขนาดพื้นที่และงบประมาณของลูกค้า</p>
 					  </div>
 					  <div id="page-2" class= "page bg-light two">
-					  	<h2 class="heading">เลือกวัสดุ</h2>
+					  	<h2 class="heading">การคัดเลือกวัสดุ</h2>
 					  	<p>นำเสนอวัสดุที่ดีที่สุดตามงบประมาณของลูกค้า</p>
 					  </div>
 					  <div id="page-3" class= "page bg-light three">
-					  	<h2 class="heading">ขออนุญาติปลูกสร้าง</h2>
+					  	<h2 class="heading">การขออนุญาติปลูกสร้าง</h2>
 					  	<p>ขออนุญาติปลูกสร้างอาคารกับหน่วยงานราชการเจ้าของพื้นที่</p>
 					  </div>
 					  <div id="page-4" class= "page bg-light four">
-					    <h2 class="heading">ทำสัญญาว่าจ้าง</h2>
+					    <h2 class="heading">การทำสัญญาว่าจ้าง</h2>
 					    <p>ทำสัญญาเพื่อรับประกันงานก่อสร้างและการแบ่งงวดงาน</p>
 					  </div>
 					  <div id="page-5" class= "page bg-light five">
-					    <h2 class="heading">จัดเตรียมพื้นที่ก่อสร้าง</h2>
+					    <h2 class="heading">การจัดเตรียมพื้นที่ก่อสร้าง</h2>
 					    <p>หลังจากทำสัญญาแล้ว เราจะทำการจัดเตรียมสถานที่ก่อสร้างเช่นการรื้อถอน หรือปรับระดับ</p>
 					  </div>
 					  <div id="page-6" class= "page bg-light six">
@@ -290,11 +290,11 @@
 					    <p>เริ่มต้นก่อสร้างจากงานรากฐานและโครงสร้าง, ผนังและหลังคา, งานช่องเปิดต่างๆ เช่นประตูหน้าต่าง, งานระบบไฟฟ้า ประปา, ตกแต่งสถาปัตยกรรม ด้วยผู้เชี่ยวชาญ</p>
 					  </div>
 					  <div id="page-7" class= "page bg-light seven">
-					    <h2 class="heading">ส่งมอบบ้าน</h2>
+					    <h2 class="heading">การส่งมอบบ้าน</h2>
 					    <p>ขั้นตอนการส่งมอบโดยการตรวจสอบจากลูกค้า</p>
 					  </div>
 					  <div id="page-8" class= "page bg-light eight">
-					    <h2 class="heading">รับประกัน</h2>
+					    <h2 class="heading">การรับประกัน</h2>
 					    <p>เรารับประกันตัวบ้านหลังจากเข้าอยู่อาศัยด้วยทีมงานผู้เชี่ยวชาญ</p>
 					  </div>
 					</div>
