--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
   <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241733.68589667237!2d98.81639103782366!3d18.794193669046035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3a7e90bb6f5d%3A0x98d46270a59b4367!2sChiang%20Mai%2C%20Mueang%20Chiang%20Mai%20District%2C%20Chiang%20Mai!5e0!3m2!1sen!2sth!4v1591684152065!5m2!1sen!2sth" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>">
+  <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/Map.jpg);">
   <script src="js/google-map.js"></script>
 
   <script src="js/main.js"></script>
