--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+		            <p><a href="tel://1234567920"></a></p>
 	            </div>
 	          </div>
           </div>
@@ -530,7 +530,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+		            <p><a href="mailto:info@yoursite.com"></a></p>
 		          </div>
 	          </div>
           </div>
@@ -541,7 +541,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">yoursite.com</a></p>
+		            <p><a href="#"></a></p>
 	            </div>
 	          </div>
           </div>
@@ -655,7 +655,7 @@
   <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/Map.jpg);">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
 
   <script src="js/main.js"></script>
